[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dbt-tests-adapter"
description = "The set of reusable tests and test fixtures used to test common functionality"
readme = "README.md"
keywords = ["dbt", "adapter", "adapters", "database", "elt", "dbt-core", "dbt Core", "dbt Cloud", "dbt Labs"]
requires-python = ">=3.9.0"
authors = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
maintainers = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # TODO: remove `dbt-core` dependency
    "dbt-core>=1.8.0a1",
    # `dbt-tests-adapter` will ultimately depend on the packages below
    # `dbt-tests-adapter` temporarily uses `dbt-core` for a dbt runner
    # `dbt-core` takes the packages below as dependencies, so they are unpinned to avoid conflicts
    "dbt-adapters>=1.14.0,<2.0",
    "pyyaml",
    "freezegun",
]
[project.urls]
Homepage = "https://github.com/dbt-labs/dbt-adapters/tree/main/dbt-tests-adapter"
Documentation = "https://docs.getdbt.com"
Repository = "https://github.com/dbt-labs/dbt-adapters.git#subdirectory=dbt-tests-adapter"
Issues = "https://github.com/dbt-labs/dbt-adapters/issues"
Changelog = "https://github.com/dbt-labs/dbt-adapters/blob/main/dbt-tests-adapter/CHANGELOG.md"
