[project]
name = "dbt-core-check"
description = "This package is a pre-commit hook that verifies that dbt-core functionality is not being used in an adapter."
version = "0.1.0a1"
authors = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."console_scripts"]
    dbt-core-check = "dbt_core_check:main"
